ci: 🐛 Update project path in GitHub Actions workflow

--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -62,7 +62,7 @@ jobs:
     - name: Build
       uses: esnya/build-rml-mod@v1
       with:
-        project: ${{ env.project }}
+        project: ${{ github.workspace }}/${{ env.project }}
         steam-login: ${{ secrets.STEAMLOGIN }}
 
     - name: Upload build artifacts
