--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -1,11 +1,8 @@
-name: .NET Build
+name: Build
 
 on:
   push:
     branches: ["master", "feature/ci"]
-  create:
-    tags:
-      - 'v*'
 
 env:
   project: ResoniteMetricsCounter
