--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -28,9 +28,6 @@ jobs:
             FILE=$(find . -name "*.csproj" | head -n 1)
             sed -i "s/>${{ steps.get_version.outputs.previousVersion }}/>${{ github.event.inputs.version }}/" $FILE
 
-        - name: Create tag
-          run: |
-            git tag v${{ github.event.inputs.version }}
         - name: Commit changes
           run: |
             git config --local user.name "github-actions[bot]"
@@ -41,4 +38,6 @@ jobs:
         - name: Push changes
           run: |
             git push
-            git push --tags
+
+        - name: Build and Release
+          uses: esnya/ResoniteMetricsCounter/.github/workflows/dotnet-build.yml@master
