--- a/.github/workflows/static-check.yml
+++ b/.github/workflows/static-check.yml
@@ -2,17 +2,7 @@ name: Static Checks
 
 on:
   push:
-    branches:
-      - master
-      - main
-      - ci
-      - ci/*
   pull_request:
-    branches:
-      - master
-      - main
-      - ci
-      - ci/*
 
 jobs:
   csharpier:
@@ -22,8 +12,8 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: '9.0.x'
       - name: Install csharpier
-        run: dotnet tool install --tool-path "$HOME/.dotnet/tools" csharpier
+        run: dotnet tool restore
       - name: Run csharpier check
-        run: $HOME/.dotnet/tools/csharpier check .
+        run: dotnet csharpier check .
