style(project): 🎨 clean up csproj formatting

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -13,7 +13,6 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <Version>0.8.0</Version>
   </PropertyGroup>
-
   <!-- Common Build Properties -->
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
@@ -21,16 +20,13 @@
     <Nullable>enable</Nullable>
     <Deterministic>true</Deterministic>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-
     <!-- Debug/Release specific settings -->
     <DebugType Condition="'$(Configuration)'=='Debug'">embedded</DebugType>
     <DebugType Condition="'$(Configuration)'=='Release'">pdbonly</DebugType>
     <Optimize Condition="'$(Configuration)'=='Release'">true</Optimize>
-
     <!-- Assembly Metadata -->
     <AssemblyTitle>$(MSBuildProjectName)</AssemblyTitle>
     <Product>$(MSBuildProjectName)</Product>
-
     <!-- Code Quality -->
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
@@ -38,24 +34,25 @@
     <WarningLevel>9999</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
-    <WarningsNotAsErrors>NU1701</WarningsNotAsErrors> <!-- Allow .NET Framework dependencies -->
-
+    <WarningsNotAsErrors>NU1701</WarningsNotAsErrors>
+    <!-- Allow .NET Framework dependencies -->
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
-
   <!-- Resonite Path Discovery -->
   <PropertyGroup Condition="'$(ResonitePath)'==''">
     <ResonitePath>$(MSBuildThisFileDirectory)Resonite/</ResonitePath>
-    <ResonitePath Condition="Exists('C:\Program Files (x86)\Steam\steamapps\common\Resonite\')">C:\Program Files (x86)\Steam\steamapps\common\Resonite\</ResonitePath>
-    <ResonitePath Condition="Exists('$(HOME)/.steam/steam/steamapps/common/Resonite/')">$(HOME)/.steam/steam/steamapps/common/Resonite/</ResonitePath>
+    <ResonitePath Condition="Exists('C:\Program Files (x86)\Steam\steamapps\common\Resonite\')"
+      >C:\Program Files (x86)\Steam\steamapps\common\Resonite\</ResonitePath
+    >
+    <ResonitePath Condition="Exists('$(HOME)/.steam/steam/steamapps/common/Resonite/')"
+      >$(HOME)/.steam/steam/steamapps/common/Resonite/</ResonitePath
+    >
   </PropertyGroup>
-
   <!-- Normalize ResonitePath -->
   <PropertyGroup>
     <ResonitePath>$([MSBuild]::EnsureTrailingSlash('$(ResonitePath)'))</ResonitePath>
   </PropertyGroup>
-
   <!-- Derived Resonite Paths -->
   <PropertyGroup>
     <ResoniteManagedPath>$(ResonitePath)Resonite_Data\Managed\</ResoniteManagedPath>
@@ -63,7 +60,6 @@
     <ResoniteHotReloadPath>$(ResonitePath)rml_mods\HotReloadMods</ResoniteHotReloadPath>
     <ResoniteLibsPath>$(ResonitePath)rml_libs\</ResoniteLibsPath>
   </PropertyGroup>
-
   <!-- Common Resonite References -->
   <ItemGroup>
     <!-- Core Resonite Mod Dependencies -->
@@ -73,10 +69,11 @@
     </Reference>
     <Reference Include="HarmonyLib">
       <HintPath>$(ResoniteLibsPath)0Harmony.dll</HintPath>
-      <HintPath Condition="Exists('$(ResonitePath)0Harmony.dll')">$(ResonitePath)0Harmony.dll</HintPath>
+      <HintPath Condition="Exists('$(ResonitePath)0Harmony.dll')"
+        >$(ResonitePath)0Harmony.dll</HintPath
+      >
       <Private>false</Private>
     </Reference>
-
     <!-- Core Resonite Engine References (Managed) -->
     <Reference Include="FrooxEngine">
       <HintPath>$(ResoniteManagedPath)FrooxEngine.dll</HintPath>
@@ -90,7 +87,6 @@
       <HintPath>$(ResoniteManagedPath)Elements.Assets.dll</HintPath>
       <Private>false</Private>
     </Reference>
-
     <Reference Include="System.Text.Json">
       <HintPath>$(ResoniteManagedPath)System.Text.Json.dll</HintPath>
       <Private>false</Private>
@@ -99,14 +95,12 @@
       <HintPath>$(ResoniteManagedPath)System.Memory.dll</HintPath>
       <Private>false</Private>
     </Reference>
-
     <!-- Debug-only references -->
     <Reference Include="ResoniteHotReloadLib" Condition="'$(Configuration)'=='Debug'">
       <HintPath>$(ResoniteLibsPath)ResoniteHotReloadLib.dll</HintPath>
       <Private>false</Private>
     </Reference>
   </ItemGroup>
-
   <!-- Common Items -->
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory).github\**\*" LinkBase=".github" />
